--- a/zcgl/src/main/res/values/strings.xml
+++ b/zcgl/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GDZC</string>
+    <string name="app_name">ZCGL</string>
     <string name="action_right">功能</string>
     <string name="hint_username">用户名</string>
     <string name="hint_password">密码</string>
@@ -9,12 +9,10 @@
     <string name="register">注册</string>
     <string name="register_text">注册账号</string>
 
-    <string name="main_sbdj">设备登记</string>
-    <string name="main_sbsh">设备审核</string>
-    <string name="main_zmxg">账目修改</string>
+    <string name="main_zcdj">资产登记</string>
     <string name="main_zccx">资产查询</string>
-    <string name="main_txfx">图形分析</string>
     <string name="main_zcbg">资产变更</string>
+    <string name="main_zcqc">资产清查</string>
 
     <string name="error_login">用户名或密码错误</string>
     <string name="empty_username">用户名不能为空</string>
